@@ -1,5 +1,6 @@
 2014-12-04 Daniel Cloud <dcloud@sunlightfoundation.com>
 * Fix cli parsing of arguments, use newer version of clint.
+* Make EntityList and EntityDict subclass list and dict directly.
 
 2014-11-25  Paul Tagliamonte  <paultag@sunlightfoundation.com>
 
